@@ -20,6 +20,7 @@ Add {cmd} to the list of commands Vimperator will execute on {event} for a URL m
 Available {events}:
 
 `----------------`--------------------------------------------
+*BookmarkPost*   Triggered after a page is bookmarked
 *LocationChange* Triggered when changing tabs or when navigating to a new location
 *PageLoadPre*    Triggered after a page load is initiated.
 *PageLoad*       Triggered when a page gets (re)loaded/opened
@@ -31,6 +32,9 @@ Available {events}:
 
 {pat} is a regular expression, use .* if you want to match all URLs. Note: This
 differs from Vim which uses a glob rather than a regexp for {pat}.
+
+Warning: Autocommand events are, in general, currently only fired when
+Vimperator commands are executed.
 ________________________________________________________________________________
 
 section:Examples[autocmd_examples]
